added scripts to update version and readme and tasks to commit and create a release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,27 +6,30 @@ on:
       version:
         description: 'Version to release'
         required: true
-    update_files:
-      version:
-        description: 'Files to update with version number'
-        required: true
-        default: 'apex.ts, README.md'
+
 jobs:
   release:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: denolib/setup-deno@v2
-      - name: Update version and readme
+      - name: Update version and README.md
         env:
           VERSION: ${{ inputs.version }}
-          FILES: ${{ inputs.files }}
+          FILES: 'apex.ts,README.md'
         run: |
           deno run --allow-run --allow-env --allow-write --allow-read ./.github/workflows/release.ts
           deno run --allow-run --allow-env --allow-write --allow-read ./.github/workflows/update-readme.ts
-      - name: Commit and tag
-        env:
-          VERSION: ${{ inputs.version }}
-        run: git add apex.ts README.md
-          echo git commit -am "$VERSION release"
-          git tag $VERSION
+      - name: Commit and tag release
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: ${{ inputs.version }} release
+          tagging_message: ${{ inputs.version }}
+      - name: Create Release
+        uses: ncipollo/release-action@v1.12.0
+        with:
+          generateReleaseNotes: true
+          makeLatest: true
+          tag: ${{ inputs.version }}
