added tests and fixes around preserving user configuration over generated config

--- a/apex.yaml
+++ b/apex.yaml
@@ -3,6 +3,8 @@ tasks:
     description: Run tests
     cmds:
       - deno fmt --check src/ test/
+      - deno lint src/
+      - deno check --unstable apex.ts
       - deno test --unstable -A
   install:
     description: Install apex
