* Added --scaffold option to generate sub command * Version bumps * Removed dead code and fixed tests with remnants of shorthand tasks * Fixed bug where tables were being rendered twice

--- a/test/fixtures/task-apex-env.yaml
+++ b/test/fixtures/task-apex-env.yaml
@@ -3,4 +3,5 @@ config:
   some_val: 12345
 tasks:
   test:
-    - echo My spec is $apex_spec and some_val is $apex_config_some_val
+    cmds:
+      - echo My spec is $apex_spec and some_val is $apex_config_some_val
